Cleanup and use gson